# es_cluster_docker_helper

./: .gitignore  README.md  dot_env  gen-compose.py  pyproject.toml  requirements.txt
templates/: docker-compose-es-kibana.template.yml  docker-compose-es-node.template.yml  docker-compose-es-setup.template.yml  services-resources.yml
