[tool.poetry]
name = "es-cluster-docker-helper"
version = "1.0.0"
description = ""
authors = ["lexxai <lexxai@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pyaml = "^25.1.0"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
